[lworld] [lw3] TestJNIArrays crashes in jni_CreateSubElementSelector

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • None
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      Test TestJNIArrays crashes with the following stack trace:

      Current thread (0x00007f7ec04a7800): JavaThread "MainThread" [_thread_in_vm, id=13366, stack(0x00007f7ea4864000,0x00007f7ea4965000)]

      Stack: [0x00007f7ea4864000,0x00007f7ea4965000], sp=0x00007f7ea4962de0, free space=1019k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xee86d0] jni_CreateSubElementSelector+0x660
      j TestJNIArrays.createSubElementSelector([Ljava/lang/Object;)Ljdk/internal/vm/jni/SubElementSelector;+0
      j TestJNIArrays.checkSubElementAPI()V+35
      j TestJNIArrays.main([Ljava/lang/String;)V+25
      v ~StubRoutines::call_stub
      V [libjvm.so+0xdceb09] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x529
      V [libjvm.so+0x1613e74] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*) [clone .constprop.0]+0xae4
      V [libjvm.so+0x1615527] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x237
      V [libjvm.so+0xf91bb0] JVM_InvokeMethod+0x270
      j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@16-valhalla
      j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+113 java.base@16-valhalla
      j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@16-valhalla
      j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@16-valhalla
      j com.sun.javatest.regtest.agent.MainWrapper$MainThread.run()V+172
      j java.lang.Thread.run()V+11 java.base@16-valhalla
      v ~StubRoutines::call_stub
      V [libjvm.so+0xdceb09] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x529
      V [libjvm.so+0xdcf985] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x4c5
      V [libjvm.so+0xdcfe31] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, Thread*)+0xb1
      V [libjvm.so+0xf704db] thread_entry(JavaThread*, Thread*)+0x12b
      V [libjvm.so+0x1827f36] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x182e020] Thread::call_run()+0x100
      V [libjvm.so+0x14fb456] thread_native_entry(Thread*)+0x116


            Assignee:
            Frederic Parain
            Reporter:
            Frederic Parain
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: