8253663: [lworld] [lw3] TestJNIArrays crashes in jni_CreateSubElementSelector

Reviewed-by: lfoltan